add 'more info' buttons: de, en

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,6 +22,10 @@
           <span> or </span>
           <button id="snapAndSend">Snap &amp; Send</button>
         </div>
+        <div id="navigate">
+          <button onclick=" window.open('https://blue-book.pages.dev/de/','_blank')"> Mehr info</button>
+          <button onclick=" window.open('https://blue-book.pages.dev/en/','_blank')"> More info</button>
+        </div>
       </div>
     </div>
     <div class="container">
