add gitlab link

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,9 +22,11 @@
           <span> or </span>
           <button id="snapAndSend">Snap &amp; Send</button>
         </div>
+        <br>
         <div id="navigate">
           <button onclick=" window.open('https://blue-book.pages.dev/de/','_blank')"> Mehr info</button>
           <button onclick=" window.open('https://blue-book.pages.dev/en/','_blank')"> More info</button>
+          <button onclick=" window.open('https://github.com/TrasheRacer/copscrypt','_blank')"> GitHub</button>
         </div>
       </div>
     </div>
