--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,11 +16,13 @@
       <div>
         <video id="camera" autoplay playsinline></video>
         <canvas id="photo"></canvas>
+        <!-- TODO: Disable stream button when somebody's already streaming -->
         <div id="buttons">
-          <button id="snap">Snap</button><span> then </span
+          <!-- <button id="snap">Snap</button><span> then </span
           ><button id="send">Send</button>
           <span> or </span>
-          <button id="snapAndSend">Snap &amp; Send</button>
+          <button id="snapAndSend">Snap &amp; Send</button> -->
+          <button id="stream-btn">Stream</button>
         </div>
         <br>
         <div id="navigate">
@@ -31,24 +33,13 @@
       </div>
     </div>
     <div class="container">
-      <!-- FIXME: Bad class name -->
-      <div class="incoming">
+      <!-- <div class="incoming">
         <h2>Outgoing photos:</h2>
         <div id="trailUser"></div>
-      </div>
+      </div> -->
       <div class="incoming">
-        <h2>Incoming photos from peer 1:</h2>
+        <h2>Streamer</h2>
         <div id="trailPeer"></div>
-      </div>
-      <div class="incoming">
-        <h2>Incoming photos from peer 2:</h2>
-      </div>
-      <div class="incoming">
-        <h2>...</h2>
-      </div>
-      <div class="incoming">
-        <h2>Incoming photos from peer N:</h2>
-        <p>TODO!</p>
       </div>
     </div>
   </body>
