link to PDF file containing slides from presentation
see https://tbd.camp/ for more

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,8 +26,9 @@
         </div>
         <br>
         <div id="navigate">
-          <button onclick=" window.open('https://blue-book.pages.dev/de/','_blank')"> Mehr info</button>
-          <button onclick=" window.open('https://blue-book.pages.dev/en/','_blank')"> More info</button>
+          <button onclick=" window.open('https://blue-book.pages.dev/de/','_blank')"> Info (Deutsch)</button>
+          <button onclick=" window.open('https://blue-book.pages.dev/en/','_blank')"> Info (English)</button>
+          <button onclick=" window.open('/DEPRECATE_THE_POLICE.pdf','_blank')"> PDF (English)</button>
           <button onclick=" window.open('https://github.com/TrasheRacer/copscrypt','_blank')"> GitHub</button>
         </div>
       </div>
