wip: prepare for adding video stream

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,6 +40,7 @@
       </div> -->
       <div class="incoming">
         <h2>Streamer</h2>
+        <video id="incoming" autoplay playsinline></video>
         <div id="trailPeer"></div>
       </div>
     </div>
