minor changes: disable unused buttons

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,9 +22,9 @@
         <canvas id="photo"></canvas>
         <div id="buttons">
           <!-- TODO -->
-          <button>Stream location</button>
+          <button disabled>Stream location</button>
           <!-- TODO: Disable stream button when somebody's already streaming -->
-          <button id="stream-btn">Stream video</button>
+          <button id="stream-btn" disabled>Stream video</button>
         </div>
         <br>
         <div id="navigate">
