--- a/index-stream.html
+++ b/index-stream.html
@@ -25,6 +25,11 @@
             </li>
         </ul>
     </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        const socket = io();
+    </script>
 </body>
 
 </html>
