--- a/index-stream.html
+++ b/index-stream.html
@@ -27,8 +27,18 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="signalling.js"></script>
     <script>
         const socket = io();
+        const room = window.location.hash.substring(1);
+        
+        if (!room) {
+            const newId = Math.floor((1 + Math.random()) * 1e16)
+                .toString(16).substring(1);
+            window.location.hash = newId
+            console.debug(`creating new stream ${newId}`)
+            createStream(socket, newId)
+        }
     </script>
 </body>
 
