--- a/index-stream.html
+++ b/index-stream.html
@@ -12,7 +12,7 @@
         <h4><span id="client-type">RECIEVER</span>: <span id="client-id"></span></h4>
     </div>
     <div class="container">
-        <video></video>
+        <video autoplay playsinline muted="true"></video>
     </div>
     <div class="separator">
         <h2>&#8595; TELEMETRY &#8595;</h2>
@@ -33,11 +33,14 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="signals.js"></script>
     <script src="tm.js"></script>
+    <script src="media.js"></script>
+
     <script>
         const socket = io();
         const clientOut = document.getElementById("client-id")
         const tmTable = document.getElementById("telemetry")
         const tmBody = tmTable.getElementsByTagName('tbody')[0]
+        const videoOut = document.querySelector("video")
 
         const hash = window.location.hash.substring(1);
         if (!hash) {
@@ -57,6 +60,7 @@
         socket.on("stream_created", (clientId) => {
             console.debug(`client ${clientId} has created a new stream`)
             clientOut.textContent = clientId
+            streamVideo(videoOut)
         })
 
         socket.on("stream_joined", (clientId) => {
