--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <div class="container">
+        <input type="text" id="creds-input" placeholder="CREDENTIALS">
+
         <div>
             <button id="create-btn">CREATE</button>
             <button id="join-btn">JOIN</button>
@@ -18,6 +20,21 @@
         <div id="connect-form" hidden>
             <input type="text" name="stream-id" id="connect-input" placeholder="ENTER STREAM ID">
             <button id="connect-btn">CONNECT</button>
+        </div>
+
+        <div>
+            <button onclick=" window.open('https://blue-book.pages.dev/de/','_blank')">
+                Info (Deutsch)
+            </button>
+            <button onclick=" window.open('https://blue-book.pages.dev/en/','_blank')">
+                Info (English)
+            </button>
+            <button onclick=" window.open('DEPRECATE_THE_POLICE.pdf','_blank')">
+                PDF (English)
+            </button>
+            <button onclick=" window.open('https://github.com/TrasheRacer/copscrypt','_blank')">
+                GitHub
+            </button>
         </div>
     </div>
 
